syntax = "proto3";
package guru.oracle.v2;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "guru/oracle/v2/oracle.proto";
import "guru/oracle/v2/params.proto";

option go_package = "github.com/gurufinglobal/guru/v2/y/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  // params defines module parameters (v2: enable flag only).
  Params params = 1 [ (gogoproto.nullable) = false ];

  // report_retention_blocks defines the number of blocks after which
  // old reports are automatically deleted.
  uint64 report_retention_blocks = 2;

  // requests is a list of oracle requests to support migrations.
  repeated OracleRequest requests = 3 [ (gogoproto.nullable) = false ];

  // categories is a list of enabled categories at genesis.
  repeated Category categories = 4;

  // whitelist_addresses is a list of initial oracle providers allowed to submit reports.
  repeated string whitelist_addresses = 5
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}
